======================================================================================================================

XX XXX XXXX
Version 6.0.0-RC.3
======================================================================================================================
AllOverIt
  * Internal reflection caching improvements
  
AllOverIt.Filtering
  * Added more overloads to IFilterSpecificationBuilder to cater for combining IBasicFilterOperation (and IArrayFilterOperation)
    with IStringFilterOperation.


21 Jul 2022
Version 6.0.0-RC.2
======================================================================================================================
AllOverIt
  * Modified HashCodeHelper to only support IEnumerable<T> or params object[]. Removed the custom seed option. The
    original algorithm is in place for NET STANDARD 2.0, but all other versions now use .NET's HashCode struct.
  * Added FieldInfo related reflection helpers and caching
  * Added Type and TypeInfo extensions to get FieldInfo

AllOverIt.Filtering
  * Refactoring / implementation improvements to support nullable types / values
  * Added support for >, <, >=, and <= string comparisons


18 Jul 2022
Version 6.0.0-RC.1
======================================================================================================================
AllOverIt
  * Improvements to IAsyncCommand and AsyncCommandPipeline - now includes a cancellation token
  * Added MemberInfo extension method CreateMemberAccessLambda()
  * Renamed IsGenericNullableType() to IsNullableType()
  * Added TypeExtensions GetInstanceMethod() and GetStaticMethod()
  * Added PropertyHelper static methods CreatePropertyGetter(), CreatePropertySetter() and supporting methods
  * Moved CommandException to Patterns/Command/Exceptions
  * Moved EnrichedEnumException to Patterns/Enumeration/Exceptions
  * Moved ValueObjectValidationException to Patterns/ValueObject/Exceptions
  * Moved ProcessException to Process/Exceptions